--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -26,7 +26,7 @@ jobs:
       DBHOST: mariadb
       DBPORT: 5432
       DBUSER: rails
-      DBPASS: password
+      DBPASSWORD: password
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
